--- a/notebooks/1a - Simple Neural Network.ipynb
+++ b/notebooks/1a - Simple Neural Network.ipynb
@@ -6,26 +6,23 @@
    "source": [
     "# Single Layer Neural Network Example\n",
     "\n",
-    "Builds a simple neural network with TensorFlow 2.0 eager execution ([code](https://github.com/michaelmendoza/learning-tensorflow/blob/master/examples/mnist/basic-net.py))\n",
+    "Builds a simple neural network with TensorFlow 2.0 eager execution ([code](../examples/mnist/mnist0_imperative.py))\n",
     "\n",
     "### MNIST Dataset Overview\n",
     "\n",
     "The MNIST database is a large dataset of handwritten digits used for training image processing algorthms. This data set has 50,000 training example images, and 10,000 testing images. Each image has been flatted from an array of size (28,28) to a 1-D numpy array with 784 features (28 * 28). \n",
     "\n",
-    "### Code Overview\n",
     "\n",
-    "1. Import Libraries\n",
-    "2. Load Data\n",
-    "3. Create Tensorflow Computation Graph:\n",
-    "    1. Create Network Varibles and Placeholders\n",
-    "    2. Create Network Architecture\n",
-    "    3. Define Loss Function and Optimizer\n",
-    "    4. Create Model Evalution Function\n",
-    "4. Run Tensorflow Computation Graph\n",
-    "    1. Initize TF Session\n",
-    "    2. Train Network\n",
-    "    3. Test Network\n",
-    "5. Plot Accuracy Results"
+    "### Code Overview:\n",
+    "1. Import libraries\n",
+    "2. Import data for training and testing \n",
+    "3. Define Model\n",
+    "4. Define Loss function\n",
+    "5. Define Training procedure\n",
+    "6. Run Model code \n",
+    "    a. Train model\n",
+    "    b. Test model\n",
+    "7. Plot accuracy of results"
    ]
   },
   {
@@ -292,13 +289,6 @@
     "plt.title(\"Accuracy for MINST Classification\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
